<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UbicompApp</string>
    <string name="action_settings">Settings</string>
    <string name="fan_text">Control Fan</string>
    <string name="heater_text">Control Heater </string>
    <string name="on_text">ON</string>
    <string name="off_text">OFF</string>
    <string name="start_service">StartService</string>
    <string name="stop_service">StopService</string>
    <string name="alert_inactive_button">Waiting For Cleaning Time</string>
    <string name="alert_active_button">Notification Seen </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cleaning">CleaningActivity</string>
    <string name="choose_role_text">Please Choose Your Role</string>
    <string name="toiler_user_button">Toilet User</string>
    <string name="janitor_button">Janitor</string>
    <string name="toilet_cleaned_menu_item">Toilet Cleaned </string>
    <string name="title_activity_user">UserActivity</string>

</resources>
