<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ubicomproject.ubicompapp.MainActivity$PlaceholderFragment"
    android:background="#162316" >

    <Button
        android:id="@+id/janitorButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toilerUserButton"
        android:layout_below="@+id/toilerUserButton"
        android:layout_marginTop="30dp"
        android:text="@string/janitor_button" />

    <TextView
        android:id="@+id/chooserRoletextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:text="@string/choose_role_text"
        android:textColor="@color/fan_color_text"
        android:textSize="22sp" />

    <Button
        android:id="@+id/toilerUserButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooserRoletextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/toiler_user_button" />

</RelativeLayout>


