<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#162316"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ubicomproject.ubicompapp.MainActivity$PlaceholderFragment" >

    <RadioGroup
        android:id="@+id/fanRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fanTextView"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/fanOnRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_text"
            android:textColor="@color/fan_color_text"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/fanOffRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/off_text"
            android:textColor="@color/fan_color_text"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android1:id="@+id/alertButton"
        android1:layout_width="200dp"
        android1:layout_height="200dp"
        android1:layout_alignParentBottom="true"
        android1:layout_centerHorizontal="true"
        android1:background="@drawable/circular_inactive_button"
        android1:gravity="center_vertical|center_horizontal"
        android1:text="@string/alert_inactive_button"
        android1:textColor="@color/alert_inactive_color_text" />

 <!--    <Button
        android1:id="@+id/stopButton"
        android1:layout_width="fill_parent"
        android1:layout_height="wrap_content"
        android1:layout_alignBaseline="@+id/alertButton"
        android1:layout_alignBottom="@+id/alertButton"
        android1:layout_alignLeft="@+id/startButton"
        android1:text="@string/stop_service" />

    <Button
        android1:id="@+id/startButton"
        android1:layout_width="fill_parent"
        android1:layout_height="wrap_content"
        android1:layout_alignTop="@+id/alertButton"
        android1:layout_centerHorizontal="true"
        android1:text="@string/start_service" /> -->

    <TextView
        android1:id="@+id/heaterTextView"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_below="@+id/fanRadioGroup"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="25dp"
        android1:text="@string/heater_text"
        android1:textColor="@color/fan_color_text"
        android1:textSize="32sp" />

    <TextView
        android1:id="@+id/fanTextView"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/heaterTextView"
        android1:layout_alignParentTop="true"
        android1:layout_marginTop="15dp"
        android1:text="@string/fan_text"
        android1:textColor="@color/fan_color_text"
        android1:textSize="32sp" />

    <RadioGroup
        android1:id="@+id/heaterRadioGroup"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignRight="@+id/fanTextView"
        android1:layout_below="@+id/heaterTextView"
        android1:orientation="horizontal" >

        <RadioButton
            android1:id="@+id/heaterOnRadio"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/on_text"
            android1:textColor="@color/fan_color_text"
            android1:textSize="24sp" />

        <RadioButton
            android1:id="@+id/heaterOffRadio"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:checked="true"
            android1:text="@string/off_text"
            android1:textColor="@color/fan_color_text"
            android1:textSize="24sp" />
    </RadioGroup>

</RelativeLayout>